# SparkyEngine-Rebuild

./: CMakeLists.txt  README.md  main.cpp
src/Debug/: logSystem.h  utility_methods.h
src/Graphics/: CMakeLists.txt  shader.cpp  shader.h  window.cpp  window.h
src/Maths/: CMakeLists.txt  maths.h  matrix4.cpp  matrix4.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
src/Utils/: file.h
src/graphics/: window.cpp  window.h
